<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scan_address_book_desc" />

    <Button
        android:id="@+id/btScan"
        style="@style/GenericButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/scan" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" >
    </View>

    <TextView
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/clipboard_address_book_desc" />

    <Button
        android:id="@+id/btClipboard"
        style="@style/GenericButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/clipboard" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" >
    </View>

</LinearLayout>