<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/pin_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/pin_char_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_char_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_char_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_char_4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_char_5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pin_char_6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center" >

            <Button
                android:id="@+id/pin_button1"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:gravity="center"
                android:text="@string/one"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button2"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/two"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button3"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/three"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/pin_button4"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/four"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button5"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/five"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button6"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/six"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/pin_button7"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/seven"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button8"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/eight"
                android:textSize="40sp" />

            <Button
                android:id="@+id/pin_button9"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/nine"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/pin_button0"
                style="@style/GenericButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_blue_slim"
                android:text="@string/zero"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>