<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/btCopyToClipboard"
    android:layout_alignTop="@+id/tvTitle" >

    <LinearLayout
        android:id="@+id/llRoot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:id="@+id/tvTitle"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/private_key"
            android:textSize="30sp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/ivQrCode"
                style="@style/QRCodeStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/an_icon"
                android:padding="0dp" />
        </FrameLayout>

        <TextView
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fading_improves_scanning"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btCopyToClipboard"
            style="@style/GenericButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_blue"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/copy_private_key_to_clipboard" />
    </LinearLayout>

</ScrollView>